# mcp-sql-server

./: .coverage  .gitignore  CHANGELOG_SECURITY.md  CISCO_SECURITY_REVIEW.md  DOCKER_SETUP.md  Dockerfile  QUICK_START.md  README.md  SECURITY.md  SETUP_LOCAL.md  call_mcp.sh  call_mcp_tool.py  cursor-mcp-config-sse.json  cursor-mcp-config.json  docker-compose.yml  get_tables_via_mcp.py  init-db.sh  init-db.sql  pyproject.toml  query_examples.md  requirements.txt  run_mcp_local.sh  server.py  setup-and-test.sh  start-docker.sh  task-definition.json  test-mcp.sh  test_mcp_client.py  test_mcp_local.py  test_mcp_protocol.py  test_mcp_tool.py  tutorial.md
config/: config.yaml  configuration.py  settings.py  sql_best_practices.json  sql_best_practices.md
docker/: create_localdb.py  init-localdb.sql
k8s/: deployment.yaml  secrets.yaml
logs/audit/: .gitkeep
scripts/: setup_local_db.py
services/analysis/: best_practices.py  execution_plan_analyzer.py  metadata_analyzer.py  models.py  review_service.py  sql_analyzer.py
services/common/: exceptions.py  logging.py
services/core/: execution_service.py  schema_service.py
services/infrastructure/: audit_service.py  auth_service.py  connection_string_builder.py  db_connection_service.py  response_service.py  validation_service.py
services/security/: __init__.py  concurrency_throttler.py  nolock_injector.py  query_cost_checker.py  resource_control_injector.py
services/sql_review/: __init__.py  agent_service.py  base_service.py  constants.py  execution_service.py  locking_service.py  performance_service.py  schema_service.py  security_service.py  utility_service.py
tests/: conftest.py  test_agent_service.py  test_analysis_models.py  test_best_practices_unit.py  test_db_connection_service_unit.py  test_execution_plan_manual.py  test_execution_service.py  test_execution_service_tools_2_3.py  test_execution_service_unit.py  test_full_workflow.py  test_local_config.py  test_locking_deadlocks.py  test_locking_service.py  test_metadata_analyzer_unit.py  test_performance_service.py  test_schema_service.py  test_security_service.py  test_security_unit.py  test_settings_validation.py  test_sql_analyzer_unit.py  test_sql_execution_plan.py  test_utility_service.py
