[project]
name = "mcp-qa-apis"
version = "1.0.0"
description = "MCP Server for Pango QA APIs - Comprehensive API access for testing and manual investigation"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Pango QA Team" }
]
keywords = ["mcp", "qa", "api", "testing", "pango"]
dependencies = [
    "mcp[cli]>=1.6.0",
    "smolagents[litellm,mcp]>=1.13.0",
    "requests>=2.32.3",
    "python-dotenv>=1.0.0",
    "boto3>=1.38.43",
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
    "pyodbc>=5.1.0",
    "sqlglot>=19.0.0",
    "pyyaml>=6.0.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=services",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests requiring multiple components",
    "slow: Tests that take longer to execute",
    "db_required: Tests that require database connection",
]

[tool.coverage.run]
source = ["services"]
omit = [
    "*/tests/*",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
